# minimal-py-poetry

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: main.py  utils.py
