[tool.poetry]
name = "minimal-py-poetry"
version = "0.1.0"
description = ""
authors = ["Robert Engler <rengler33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
