[tool.poetry]
name = "minimal-py-poetry"
version = "0.1.0"
description = ""
authors = ["Robert Engler <rengler33@gmail.com>"]
readme = "README.md"
packages = [{include = "app/"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.81.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["app"]
